fixed spacing on right side text

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ div img {
   background-color: #ffffff;
   position: relative;
   overflow: scroll;
-  padding: 45px 45px 45px 45px;
+  padding: 35px 45px 45px 45px;
   border-collapse: separate;
 }
 
@@ -122,7 +122,7 @@ td {
 }
 
 .in-the-space-between {
-  height: 20px;
+  height: 2px;
 }
 
 h4 {
